<resources>
    <string name="app_name">StructureInspectionApp</string>
    <string name="defect_title_hint">Enter a title for the defect.</string>
    <string name="defect_title_label">Title</string>
    <string name="defect_details_label">Details</string>
    <string name="defect_solved_label">Solved</string>
    <string name="date_picker_title">Date of defect:</string>
    <string name="new_defect">New Defect</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d defects</string>
    <string name="defect_suspect_text">Choose Structural Engineer</string>
    <string name="defect_report_text">Send Defect Report</string>
    <string name="defect_report">%1$s!
    The defect was discovered on %2$s. %3$s, and %4$s
  </string>
    <string name="defect_report_solved">The case is solved</string>
    <string name="defect_report_unsolved">The case is not solved</string>
    <string name="defect_report_no_suspect">there is no suspect.</string>
    <string name="defect_report_suspect">the suspect is %s.</string>
    <string name="defect_report_subject">StructureInspection Defect Report</string>
    <string name="send_report">Send defect report via</string>
</resources>
