<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/defect_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/defect_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defect_title_label" />

            <EditText
                android:id="@+id/defect_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defect_title_hint" />


        </LinearLayout>
    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defect_details_label" />

    <EditText
        android:id="@+id/defect_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description" />



    <Button
        android:id="@+id/defect_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/defect_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defect_solved_label" />

    <Button
        android:id="@+id/defect_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defect_suspect_text" />

    <Button
        android:id="@+id/defect_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defect_report_text" />

</LinearLayout>